// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagsCloud should render correctly with active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        class="text-lg font-extrabold"
      >
        JavaScript
           
        10
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Web Development
           
        30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Frontend Development
           
        20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        class="text-lg font-extrabold"
      >
        React
           
        5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(118, 118, 118);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Redux
           
        1
      </a>
    </span>
    <span
      class="ant-tag mb-3 bg-primary border-primary"
    >
      <a
        class="text-lg font-extrabold text-light"
      >
        All
      </a>
    </span>
  </div>
</div>
`;

exports[`TagsCloud should render correctly without active tag (snapshot) 1`] = `
<div>
  <div>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(112, 72, 232);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Web Development
           
        30
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(55, 178, 77);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Frontend Development
           
        20
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(245, 159, 0);"
    >
      <a
        class="text-lg font-extrabold"
      >
        JavaScript
           
        10
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(24, 144, 255);"
    >
      <a
        class="text-lg font-extrabold"
      >
        React
           
        5
      </a>
    </span>
    <span
      class="ant-tag ant-tag-has-color mb-3"
      style="background-color: rgb(24, 144, 255);"
    >
      <a
        class="text-lg font-extrabold"
      >
        Redux
           
        1
      </a>
    </span>
  </div>
</div>
`;
